# rs-progress

./: Cargo.toml  README.md  README.zh_CN.md
.rs-ci/.circleci/: config.yml
doc/: user_guide.md  user_guide.zh_CN.md
src/: lib.rs  logger_progress_reporter.rs  no_op_progress_reporter.rs  progress.rs  progress_counters.rs  progress_event.rs  progress_event_builder.rs  progress_format.rs  progress_phase.rs  progress_reporter.rs  progress_stage.rs  running_progress_loop.rs  running_progress_notifier.rs  running_progress_signal.rs  writer_progress_reporter.rs
src/model/: mod.rs  progress_counter.rs  progress_counters.rs  progress_event.rs  progress_event_builder.rs  progress_metric.rs  progress_metric_snapshot.rs  progress_phase.rs  progress_schema.rs  progress_stage.rs
src/reporter/: mod.rs  progress_reporter.rs
src/reporter/format/: format_duration.rs  human_readable_metric_snapshot_formatter.rs  json_metric_snapshot_formatter.rs  metric_snapshot_formatter.rs  mod.rs
src/reporter/impls/: format.rs  format_tests.rs  formatted_progress_reporter.rs  human_readable_progress_reporter.rs  json_logger_progress_reporter.rs  json_progress_reporter.rs  json_stderr_progress_reporter.rs  json_stdout_progress_reporter.rs  mod.rs  (+7 more)
src/running/: mod.rs  running_progress_guard.rs  running_progress_loop.rs  running_progress_notifier.rs  running_progress_point_handle.rs  running_progress_points.rs  running_progress_signal.rs  scoped_running_progress.rs
src/runtime/: mod.rs  progress_run.rs
tests/: mod.rs  progress_tests.rs  running_progress_loop_tests.rs  running_progress_signal_tests.rs
tests/docs/: readme_tests.rs
tests/model/: mod.rs  progress_counter_tests.rs  progress_counters_tests.rs  progress_event_builder_tests.rs  progress_event_tests.rs  progress_metric_snapshot_tests.rs  progress_metric_tests.rs  progress_phase_tests.rs  progress_schema_tests.rs  progress_stage_tests.rs
tests/progress/: mod.rs  progress_tests.rs
tests/reporter/: format_duration_tests.rs  formatted_progress_reporter_tests.rs  human_readable_progress_reporter_tests.rs  json_logger_progress_reporter_tests.rs  json_progress_reporter_tests.rs  logger_progress_reporter_tests.rs  metric_snapshot_progress_reporter_tests.rs  mod.rs  no_op_progress_reporter_tests.rs  progress_reporter_tests.rs  writer_progress_reporter_tests.rs
tests/running/: mod.rs  running_progress_guard_tests.rs  running_progress_loop_tests.rs  running_progress_notifier_tests.rs  running_progress_point_handle_tests.rs  running_progress_points_tests.rs  running_progress_signal_tests.rs  scoped_running_progress_tests.rs
tests/runtime/: mod.rs  progress_run_tests.rs
(+9 files in other folders)
